made the remove-self-from-reply-all code case-insensitive.

added htmlparser library to handle replies to html-only email.

opening a message by keypress was incorrectly happening on the AwtEventThread.

2.0 branch:  moved to javamail 1.4, jdk 1.6.

060227 release
--------------

in the folder file chooser, double-clicking on a folder that holds only
messages (no other folders) now selects the folder, rather than opening it.

fixed a bug with subscribing to subfolders of stores where the subfolder 
would get the subscription, but the sub-subfolder wouldn't.

you can now subscribe to multiple folders at once.

added a new icon set, and added in an IconManager to allow for changeable
icon sets.  set IconManager._default=IconSet.crystalclear to see the new
icon set.  this will most likely be the default iconset for release 2.0

fixed a javamail-crypto bug in which missing classes can cause 
getEncryptionUtils() to throw an uncaught error.

messages from sent folders should show up properly in search folders now.
also, empty values should now show up as blank rather than as 'loading...'.

changed the select-first-unread code so that it handles cases where the
server returns a bogus unread count.

changed the default font under windows to something a bit more readable.

if autoCache is set, you now connect to the folder and show the messages
before you start to download the messages to cache them.

added a way to save all the attachments on a message at once.

C+W now closes internal frame windows.

if you have multiple folder windows opeening on startup, only the first
one is selected by default now, so that you don't have your keyboard focus
changing on you.

middle clicking folder and message internalframes now deselects them
and moves them to the back.

carriage returns in subjects are now replaced with spaces.

051031 release
--------------

fixed a bug where the 3rd field was always opening an attachment menu even
if there were no attachments.
