@@ -419,6 +419,8 @@ error.noAddressBook=No Address Book set as Default.
 error.AddressBook.saveAddressBook=Error saving Address Book:  
 error.AddressBook.loadAddressBook=Error reloading Address Book: 
 
+error.urlHandler.openingUrl=Error opening url {0}:  {1}
+
 title.preferences=Edit Preferences
 title.storeConfig=Edit Mailbox Information
 title.userConfig=Edit User Information
